--- a/config/database.yml
+++ b/config/database.yml
@@ -5,8 +5,8 @@
 #   gem "sqlite3"
 #
 default: &default
-  adapter: postgresql
-  # adapter: sqlite3
+  # adapter: postgresql
+  adapter: sqlite3
   encoding: unicode
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
